CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(mptool CXX)
SET(CMAKE_CXX_STANDARD 14)
INCLUDE(cmake/helper.cmake)
FIND_PACKAGE(Boost 1.58 REQUIRED)


ADD_SUBDIRECTORY(ext)

ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(rrt)
ADD_SUBDIRECTORY(rrt_star)
ADD_SUBDIRECTORY(model)

ADD_SUBDIRECTORY(unit_tests)

ENABLE_TESTING()
